--- a/style/custom.css
+++ b/style/custom.css
@@ -47,6 +47,113 @@ img.small-logo {
     }
 }
 
+.navbar .navbar-text{
+    line-height: 1em;
+}
+
+.navbar-fixed-top .navbar-inner {
+ border-width: 0;
+}
+
+.navbar-inner .pull-right {
+    margin-top: 4px;
+}
+
+.navbar .logininfo a {
+    color: #fff;
+}
+
+.navbar .logininfo {
+    text-align: right;
+}
+
+.block {
+    border-top: 2px solid #009CDA;
+    border-right: 0;
+    border-bottom: 0;
+    border-left: 0;
+    border-radius: 0 0 0 0;
+    padding: 0;
+    background-color: transparent;
+}
+
+.block .header .title h2 {
+    background-color: #F5F5F5;
+    color: #000;
+}
+
+#page-mod-forum-view .unread,
+.forumpost.unread .row.header,
+.path-course-view .unread,
+span.unread {
+    background-color: #c4e4f8;
+}
+
+nav.navbar-inner h1 {
+    color: #FFFFFF;
+    font-size: 1.8em;
+    margin: 0;
+    text-align: right;
+}
+
+header.navbar .nav > li {
+    float: none;
+}
+
+header .nav-collapse.secure .nav.pull-right{
+    padding-top: 10px;
+}
+
+header .nav-collapse.secure li {
+    color: #ddd;
+}
+
+.usermenu {
+    margin: 13px 0;
+}
+
+.navbar-fixed-top .navbar-inner, .navbar-static-top .navbar-inner, .navbar-inner {
+    background-color: #000;
+    background-image: -webkit-gradient(linear,0 0,0 100%,from(#444),to(#000));
+    background-image: linear-gradient(to bottom,#444,#000);
+    border-bottom-color: #009cda;
+    border-width: 0 0 5px 0;
+}
+
+.usermenu .moodle-actionmenu .toggle-display {
+    color: #ddd;
+}
+
+.usermenu .moodle-actionmenu .toggle-display:hover {
+    color: #fff;
+}
+
+.jsenabled .moodle-actionmenu[data-enhance] .toggle-display.textmenu .caret:hover {
+    border-top-color: #fff;
+}
+
+.jsenabled .moodle-actionmenu[data-enhance] .toggle-display.textmenu .caret {
+    border-top-color: #ddd;
+}
+
+.jsenabled .usermenu .container-fluid .moodle-actionmenu.show ul.menu a:hover {
+    background-color: #005388;
+    background-image: -webkit-gradient(linear,0 0,0 100%,from(#009cda),to(#005388));
+    background-image: linear-gradient(to bottom,​ #009cda,​ #005388);
+}
+
+.avatar .userpicture {
+    border-radius: 50%;
+}
+
+#page-header h1 {
+    margin-top: 0.5em;
+}
+
+.jsenabled .usermenu .moodle-actionmenu.show {
+    background-color: transparent;
+}
+
 /* Custom CSS Settings
 -------------------------*/
 [[setting:customcss]]
