--- a/style/custom.css
+++ b/style/custom.css
@@ -1,5 +1,22 @@
 /* Custom CSS
 -------------------------*/
+
+.container-fluid {
+    max-width: none;
+}
+
+#page.container-fluid {
+    margin-top: 1em;
+}
+
+nav.navbar-inner .headermain h1 {
+    margin: 10px 0 0 0;
+}
+
+.navbar .btn.btn-navbar {
+    display: none;
+}
+
 a.logo {
     background: url([[setting:logo]]) no-repeat 0 0;
     display: block;
@@ -36,18 +53,15 @@ a.logo {
     text-align: right;
 }
 
-.breadcrumb-nav ul {
-    margin: 0;
-}
-
-.breadcrumb-nav li {
-    display: inline-block;
-}
-
 .breadcrumb-nav > nav ul {
     background-color: #F5F5F5;
     padding: 0.5em 0.5em;
     border-radius: 6px;
+}
+
+.breadcrumb-nav .sep {
+    font-size: 0.8em;
+    color: #999;
 }
 
 .user_menu_mail_count {
@@ -69,7 +83,7 @@ a.logo {
     margin-top: 11px;
     margin-bottom: -34px;
     border-radius: 50%;
-    background-color: red;
+    background-color: #f22613;
     font-weight: bold;
     text-align: center;
     width: 21px;
@@ -121,7 +135,13 @@ header.navbar .nav > li {
 }
 
 .usermenu {
-    margin: 13px 0;
+    margin: 9px 0 0 10px;
+}
+
+.usermenu .login a,
+.usermenu .login a:hover,
+.usermenu .login a:focus {
+    color: #ffffff;
 }
 
 .navbar-fixed-top .navbar-inner, .navbar-static-top .navbar-inner, .navbar-inner {
@@ -166,6 +186,63 @@ header.navbar .nav > li {
     background-color: transparent;
 }
 
+.course-content .main {
+    background: none repeat scroll 0% 0% #F7F5F1;
+}
+
+.course-content ul.topics li.section,
+.course-content ul.weeks li.section {
+    background: none repeat scroll 0% 0% #F7F5F1;
+    padding-bottom: 0;
+}
+
+.course-content ul.topics li.section .content,
+.course-content ul.weeks li.section .content {
+    background: none repeat scroll 0% 0% #fff;
+}
+
+.course-content ul li.section.main {
+    border: 1px solid #DDD;
+}
+
+.course-content ul.topics li.section .content,
+.course-content ul.weeks li.section .content {
+    margin-left: 40px;
+    margin-right: 40px;
+    padding: 10px;
+}
+
+.course-content .content h3.section-title {
+    font-size: 1.25em;
+}
+
+.section {
+    margin: 0;
+}
+
+.section h3 {
+    margin-top: 0;
+}
+
+.course-content ul.section {
+    margin-bottom: 0;
+}
+
+.coursebox {
+    border: none;
+    padding: 0 0 0 1em;
+}
+
+.block .content .coursebox h3,
+.block .content .categorybox h3,
+.block .header h2 {
+    text-transform: none;
+}
+
+.block .content .categorybox h3 {
+    color: #000;
+    padding: 0;
+}
 
 /* Custom CSS Settings
 -------------------------*/
