--- a/style/custom.css
+++ b/style/custom.css
@@ -1,6 +1,9 @@
 /* Custom CSS
 -------------------------*/
 
+a:hover {
+    text-decoration: none;
+}
 .container-fluid {
     max-width: none;
 }
@@ -11,6 +14,10 @@
 
 nav.navbar-inner .headermain h1 {
     margin: 10px 0 0 0;
+}
+
+.proves nav.navbar-inner .headermain h1 {
+    color: #ffa500;
 }
 
 .navbar .btn.btn-navbar {
@@ -152,6 +159,10 @@ header.navbar .nav > li {
     border-width: 0 0 5px 0;
 }
 
+header.proves .navbar-fixed-top .navbar-inner, header.proves .navbar-static-top .navbar-inner, header.proves .navbar-inner {
+    border-bottom-color: #ffa500;
+}
+
 .usermenu .moodle-actionmenu .toggle-display {
     color: #ddd;
 }
@@ -190,6 +201,11 @@ header.navbar .nav > li {
     background: none repeat scroll 0% 0% #F7F5F1;
 }
 
+.course-content ul.topics li.section.current,
+.course-content ul.weeks li.section.current {
+    background-color: #C4E4F8;
+}
+
 .course-content ul.topics li.section,
 .course-content ul.weeks li.section {
     background: none repeat scroll 0% 0% #F7F5F1;
@@ -203,6 +219,10 @@ header.navbar .nav > li {
 
 .course-content ul li.section.main {
     border: 1px solid #DDD;
+}
+
+.course-content ul li.section.main.current {
+    border: 1px solid #59abe3;
 }
 
 .course-content ul.topics li.section .content,
@@ -225,7 +245,7 @@ header.navbar .nav > li {
 }
 
 .course-content ul.section {
-    margin-bottom: 0;
+    margin: 0;
 }
 
 .coursebox {
@@ -242,6 +262,11 @@ header.navbar .nav > li {
 .block .content .categorybox h3 {
     color: #000;
     padding: 0;
+}
+
+.course-content .section .activity img.iconlarge {
+    height: 20px;
+    width: 20px;
 }
 
 /* Custom CSS Settings
