Nous estils pel nombre d'adjunts als debats dels fòrums

--- a/style/custom.css
+++ b/style/custom.css
@@ -121,7 +121,8 @@ span.post_favourite {
     background-color: #ffc;
 }
 
-span.iconfav {
+span.iconfav,
+span.iconattach {
     float: right;
     font-weight: bold;
 }
