--- a/style/custom.css
+++ b/style/custom.css
@@ -170,7 +170,8 @@ span.post_favourite {
     background-color: #ffc;
 }
 
-span.iconfav {
+span.iconfav,
+span.iconattach {
     float: right;
     font-weight: bold;
 }
