--- a/style/custom.css
+++ b/style/custom.css
@@ -1,5 +1,63 @@
 /* Custom CSS
 -------------------------*/
+@font-face {
+    font-family: 'Open Sans';
+    src: url('[[font:theme|opensans-regular.eot]]') format("embedded-opentype"), url('[[font:theme|opensans-regular.woff]]') format("woff"), url('[[font:theme|opensans-regular.ttf]]') format("truetype"), url('[[font:theme|opensans-regular.svg#OpenSansRegular]]') format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url('[[font:theme|opensans-light.eot]]') format("embedded-opentype"), url('[[font:theme|opensans-light.woff]]') format("woff"), url('[[font:theme|opensans-light.ttf]]') format("truetype"), url('[[font:theme|opensans-light.svg#OpenSansLight]]') format("svg");
+    font-weight: 300;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url('[[font:theme|opensans-semibold.eot]]') format("embedded-opentype"), url('[[font:theme|opensans-semibold.woff]]') format("woff"), url('[[font:theme|opensans-semibold.ttf]]') format("truetype"), url('[[font:theme|opensans-semibold.svg#OpenSansSemibold]]') format("svg");
+    font-weight: 600;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url('[[font:theme|opensans-bold.eot]]') format("embedded-opentype"), url('[[font:theme|opensans-bold.woff]]') format("woff"), url('[[font:theme|opensans-bold.ttf]]') format("truetype"), url('[[font:theme|opensans-bold.svg#OpenSansBold]]') format("svg");
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url('[[font:theme|opensans-italic.eot]]') format("embedded-opentype"), url('[[font:theme|opensans-italic.woff]]') format("woff"), url('[[font:theme|opensans-italic.ttf]]') format("truetype"), url('[[font:theme|opensans-italic.svg#OpenSansItalic]]') format("svg");
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url('[[font:theme|opensans-lightitalic.eot]]') format("embedded-opentype"), url('[[font:theme|opensans-lightitalic.woff]]') format("woff"), url('[[font:theme|opensans-lightitalic.ttf]]') format("truetype"), url('[[font:theme|opensans-lightitalic.svg#OpenSansLightItalic]]') format("svg");
+    font-weight: 300;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url('[[font:theme|opensans-semibolditalic.eot]]') format("embedded-opentype"), url('[[font:theme|opensans-semibolditalic.woff]]') format("woff"), url('[[font:theme|opensans-semibolditalic.ttf]]') format("truetype"), url('[[font:theme|opensans-italic.svg#OpenSansSemiboldItalic]]') format("svg");
+    font-weight: 600;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url('[[font:theme|opensans-bolditalic.eot]]') format("embedded-opentype"), url('[[font:theme|opensans-bolditalic.woff]]') format("woff"), url('[[font:theme|opensans-bolditalic.ttf]]') format("truetype"), url('[[font:theme|opensans-bolditalic.svg#OpenSansBoldItalic]]') format("svg");
+    font-weight: bold;
+    font-style: italic;
+}
+
+body,h1,h2,h3,h4,h5,h6,p,ul,ol,dl,input,textarea {
+    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+
 a:hover {
     text-decoration: none;
 }
