Millora en la visualització de la pantalla de correcció de tasques

--- a/style/custom.css
+++ b/style/custom.css
@@ -519,6 +519,10 @@ table.flexible tr:hover {
     }
 }
 
+.path-mod-assign [data-region="grading-navigation"] {
+    box-sizing: border-box;
+}
+
 /* Custom CSS Settings
 -------------------------*/
 [[setting:customcss]]
