--- a/style/custom.css
+++ b/style/custom.css
@@ -470,6 +470,10 @@ table.flexible tr:hover {
     }
 }
 
+.path-mod-assign [data-region="grading-navigation"] {
+    box-sizing: border-box;
+}
+
 /* Custom CSS Settings
 -------------------------*/
 [[setting:customcss]]
