Correcció estil feedbackspan dins sub i sup L'estil feedbackspan contingut dins els tags sub i sup ara es mostra correctament

--- a/style/custom.css
+++ b/style/custom.css
@@ -506,6 +506,14 @@ table.flexible tr:hover {
     text-align: center;
 }
 
+.que.multianswer sub span.feedbackspan,
+.que.multianswer sup span.feedbackspan {
+    line-height: 20px;
+    font-size: 14px;
+    max-width: none !important;
+    width: 10em !important;
+}
+
 @media (max-width:480px) {
     .course-content ul.topics li.section .content, .course-content ul.weeks li.section .content {
         margin-left: 0;
