--- a/style/custom.css
+++ b/style/custom.css
@@ -527,6 +527,10 @@ table.flexible tr:hover {
     width: 5em;
 }
 
+.resourcegeneral iframe {
+    border: 1px solid rgba(200, 200, 200, .4);
+}
+
 @media (max-width:480px) {
     .course-content ul.topics li.section .content, .course-content ul.weeks li.section .content {
         margin-left: 0;
