Afegit l'estil i la icona de la missatgeria interna

--- a/style/custom.css
+++ b/style/custom.css
@@ -231,7 +231,8 @@ header .nav-collapse.secure li {
 }
 
 header .popover-region-notifications,
-header .popover-region-mail {
+header .popover-region-mail,
+header .popover-region-messages {
     margin-top: 9px;
 }
 
